added box layout to index.html, added grid layout to portfolio.html, added contact form to contact.html, added screenshots

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Homepage</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
+    <link rel='stylesheet'type='text/css' media='screen' href="css/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
 </head>
@@ -25,14 +27,15 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="index.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">About</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
+
             </ul>
           </div>
         
@@ -41,16 +44,25 @@
       </nav>
       
       <!--Content-->
-
-<img src="68C76765-0561-4BE8-9E75-2F8243B6ECE2_1_105_c.jpeg" />
-
+      <div class="card mb-3" style="max-width: 440px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGVR7ny2mjEzw/profile-displayphoto-shrink_200_200/0?e=1607558400&v=beta&t=0sn-EK5F7uTxT32f7ZN9lJpDN-ZocmIZZHpnVl_Re7s" class="img-fluid" alt="Self-portrait">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">About Me</h5>
+              <p class="card-text">I'm a software engineer with experience with experience in HTML, CSS, Javascript, and Java. In addition, I've a Bachelor of Science in Engineering.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
 
 <!--Footer-->
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<h6>Copyright 2020 </h6>
+  
 </body>
 </html>
