--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,11 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Portfolio</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href="css/style.css">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
 </head>
@@ -25,13 +27,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="index.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">About</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -42,16 +44,41 @@
 
     
 <!--Content-->
+<div class="selfie">
+<img src="68C76765-0561-4BE8-9E75-2F8243B6ECE2_1_105_c.jpeg" width="200" height="200" alt="self-portrait"/>
+</div>
 
-<img src="68C76765-0561-4BE8-9E75-2F8243B6ECE2_1_105_c.jpeg" />
+<div class="container1">
+  <div class="row">
+    <div class="column">
+      <p>Code Refractor</p>
+      </div>
+      <div class="column">
+        <p>Responsive Portfolio</p>
+      </div>
+        <div class="column">
+          <p>Password Generator</p>
+        </div>   
+      </div>
+      <div class="row">
+        <div class="column">
+          <p>Day Planner</p>
+          </div>
+          <div class="column">
+            <p>Weather Dashboard</p>
+          </div>
+            <div class="column">
+              <p>Project 1</p>
+            </div>   
+          </div>
+    </div> 
 
 
+
+      
   
 
 <!--Footer-->
-
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<h6>Copyright 2020 </h6>
 </body>
 </html>
