added screenshots and images to image folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     
 <!--Content-->
 <div class="selfie">
-<img src="68C76765-0561-4BE8-9E75-2F8243B6ECE2_1_105_c.jpeg" width="200" height="200" alt="self-portrait"/>
+<img src="/images/68C76765-0561-4BE8-9E75-2F8243B6ECE2_1_105_c.jpeg" width="200" height="200" alt="self-portrait"/>
 </div>
 
 <div class="container1">
