--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,9 @@
 <div class="container1">
   <div class="row">
     <div class="column">
-      <p>Code Refractor</p>
+      <p>Code Refractor</p> <br>
+      <a href="https://schawn6484.github.io/homework1stuff/">View Demo</a>
+
       </div>
       <div class="column">
         <p>Responsive Portfolio</p>
