porfolio url images fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     
 <!--Content-->
 <div class="selfie">
-<img src="/images/logo.jpeg" width="200" height="200" alt="self-portrait"/>
+<img src="https://schawn6484.github.io/homework2stuff/images/logo.jpeg" width="200" height="200" alt="self-portrait"/>
 </div>
 
   <div class="row">
