resolved portfolio image issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     
 <!--Content-->
 <div class="selfie">
-<img src="https://schawn6484.github.io/homework2stuff/images/logo.jpeg" width="200" height="200" alt="self-portrait"/>
+<img src="https://media-exp1.licdn.com/dms/image/C4D03AQGVR7ny2mjEzw/profile-displayphoto-shrink_200_200/0?e=1607558400&v=beta&t=0sn-EK5F7uTxT32f7ZN9lJpDN-ZocmIZZHpnVl_Re7s" width="200" height="200" alt="self-portrait"/>
 </div>
 
   <div class="row">
